--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+@import url("https://fonts.googleapis.com/css?family=Barlow:400,700");
+body {
+  font-family: 'Barlow', sans-serif; }
+
 #dashboard {
   display: flex;
   flex-direction: column; }
@@ -21,3 +25,8 @@ h2 {
 .storage-info {
   flex-wrap: wrap;
   flex: 1; }
+
+.bar-name {
+  font-weight: 700;
+  font-size: 23px;
+  text-transform: uppercase; }
