--- a/css/style.scss
+++ b/css/style.scss
@@ -6,17 +6,23 @@ body{
    font-family: 'Barlow', sans-serif;
    background-color: #f4f4f4;
    padding: 30px;
+   position: relative;
+   margin: 0;
 }
 #dashboard{
     display: flex;
     flex-direction: column;
 }
-.cards, .bartender-info, .beer-levels, .queue, .storage-info{
+.bartender-info, .beer-levels, .queue, .storage-info{
     display: flex;
 }
+.beer-levels{
+    justify-content: center;
+}
 .cards{
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-gap: 30px;
 }
 h2{
     font-size: 15px;
@@ -32,7 +38,7 @@ h2{
 }
 .storage-info{
     flex-wrap: wrap;
-    width: 790px;
+    padding-left: 10px;
 }
 .bar-name{
     font-weight: 700;
@@ -49,7 +55,6 @@ h2{
 .card{
     background-color: white;
     padding: 15px;
-    margin: 20px 0;
     box-shadow: 0px 0px 40px #bbb9b9;
 }
 .bartender{
@@ -63,15 +68,14 @@ h2{
     height: 100px;
     width: 100px;
     border-radius: 50px;
-    margin: 0 0 15px 0;
+    margin: 0 0 35px 0;
 }
 .all-bartenders{
     background-color: $green;
     color: white;
-    min-width: 490px;
-    display: flex;
     flex-direction: column;
     justify-content: center;
+    grid-column: 1 / 3;
 }
 .card-name{
     font-size: 20px;
@@ -90,10 +94,13 @@ h2{
 }
 .people-served{
     font-size: 14px;
+    text-align: center;
 }
 .bartender-info{
     display: flex;
     justify-content: center;
+    height: 85%;
+    align-items: center;
 }
 .bar-open{
     color: $green;
@@ -142,7 +149,7 @@ h2{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 220px;
+    grid-column: 6 / 7;
 }
 .queue div{
     background-image: url('images/person.svg');
@@ -216,4 +223,72 @@ progress:before{
     color: $red;
     font-size: 14px;
     font-weight: 700;
+}
+.hidden{
+    display: none !important;
+}
+.beer-img{
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+}
+.beer-info{
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 10px;
+}
+.beer-description{
+    margin-right: 50px;
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+}
+.btn{
+    border: 2px solid $green;
+    padding: 8px 10px;
+    border-radius: 50px;
+    font-size: 13px;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: $green;
+    margin-top: 10px;
+}
+.modal{
+    background-color: rgba(0,0,0,0.6);
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    z-index: 999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.modal-content{
+    width: 50%;
+    display: flex;
+    .description{
+        background-color: white;
+        width: 100%;
+        padding: 40px;
+    }
+}
+.close-btn{
+    background-color: black;
+    color: white;
+    height: 50px;
+    width: 50px;
+}
+.queue-wrapper{
+    grid-column: 1 / 7;
+}
+.beer-info-wrapper{
+    grid-column: 4 / 7;
+}
+.beer-levels-all{
+    grid-column: 3 / 6;
+}
+.storage-wrapper{
+    grid-column: 1 / 4;
 }
